--- a/index.html
+++ b/index.html
@@ -29,36 +29,36 @@
 </div>
 <ul class="category">
     <li>
-        <a href="">
+        <a href="./list.html">
             <img src="./image/l1.png" alt="">
         </a>
        <p>水路综合</p>
     </li>
-    <li><a href="">
+    <li><a href="./list.html">
         <img src="./image/l2.png" alt="">
     </a>
         <p>水管维修</p></li>
-    <li><a href="">
+    <li><a href="./list.html">
         <img src="./image/l3.png" alt="">
     </a>
         <p>管道维修</p></li>
-    <li><a href="">
+    <li><a href="./list.html">
         <img src="./image/l4.png" alt="">
     </a>
         <p>龙头维修</p></li>
-    <li><a href="">
+    <li><a href="./list.html">
         <img src="./image/l5.png" alt="">
     </a>
         <p>地漏疏通</p></li>
-    <li><a href="">
+    <li><a href="./list.html">
         <img src="./image/l6.png" alt="">
     </a>
         <p>阀门维修</p></li>
-    <li><a href="">
+    <li><a href="./list.html">
         <img src="./image/l7.png" alt="">
     </a>
         <p>下水道疏通</p></li>
-    <li><a href="">
+    <li><a href="./list.html">
         <img src="./image/l8.png" alt="">
     </a>
         <p>其他</p></li>
