--- a/list.html
+++ b/list.html
@@ -23,7 +23,7 @@
 <section class="list">
     <ul class="scroll">
         <li class="listItem">
-            <a href="">
+            <a href="./xiangqing.html">
                 <div class="thumb">
                     <img src="./image/l1.png" alt="">
                 </div>
@@ -42,7 +42,7 @@
             </a>
         </li>
         <li class="listItem">
-            <a href="">
+            <a href="./xiangqing.html">
                 <div class="thumb">
                     <img src="./image/l1.png" alt="">
                 </div>
@@ -61,7 +61,7 @@
             </a>
         </li>
         <li class="listItem">
-            <a href="">
+            <a href="./xiangqing.html">
                 <div class="thumb">
                     <img src="./image/l1.png" alt="">
                 </div>
@@ -80,7 +80,7 @@
             </a>
         </li>
         <li class="listItem">
-            <a href="">
+            <a href="./xiangqing.html">
                 <div class="thumb">
                     <img src="./image/l1.png" alt="">
                 </div>
@@ -99,7 +99,7 @@
             </a>
         </li>
         <li class="listItem">
-            <a href="">
+            <a href="./xiangqing.html">
                 <div class="thumb">
                     <img src="./image/l1.png" alt="">
                 </div>
