--- a/xiangqing.html
+++ b/xiangqing.html
@@ -161,7 +161,7 @@
             <p>联系商家</p>
         </a>
 
-        <span class="jia">加入购物车</span>
+        <span class="jia"><a href="./gouwuche.html">加入购物车  </a></span>
 
         <span class="xia">立即下单</span>
     </footer>
