--- a/gouwuche.html
+++ b/gouwuche.html
@@ -23,6 +23,9 @@
                 <p>宅快修</p>
             </div>
             <a href="">
+                <div class="xiaodian">
+                    <img src="./image/ju1.png" alt="">
+                </div>
                 <div class="thumb">
                     <img src="./image/long.png" alt="">
                 </div>
@@ -41,10 +44,13 @@
         </li>
         <li class="listItem">
             <div class="title">
-                <img src="./image/ju.jpg" alt="">
+                <img src="./image/ju1.png" alt="">
                 <p>宅快修</p>
             </div>
             <a href="">
+                <div class="xiaodian">
+                    <img src="./image/ju1.png" alt="">
+                </div>
                 <div class="thumb">
                     <img src="./image/long.png" alt="">
                 </div>
@@ -63,10 +69,13 @@
         </li>
         <li class="listItem">
             <div class="title">
-                <img src="./image/ju.jpg" alt="">
+                <img src="./image/ju1.png" alt="">
                 <p>宅快修</p>
             </div>
             <a href="">
+                <div class="xiaodian">
+                    <img src="./image/ju1.png" alt="">
+                </div>
                 <div class="thumb">
                     <img src="./image/long.png" alt="">
                 </div>
@@ -83,7 +92,13 @@
                 </div>
             </a>
         </li>
+
+
     </ul>
+    <div class="quanxuan ">
+        <img src="./image/ju1.png" alt="">
+        <p>全选</p>
+    </div>
     <footer>
         <div class="f1">
             <span class="ff1">合  计 : <strong>¥ 162</strong></span>
