--- a/list.html
+++ b/list.html
@@ -25,7 +25,7 @@
         <li class="listItem">
             <a href="./xiangqing.html">
                 <div class="thumb">
-                    <img src="./image/l1.png" alt="">
+                    <img src="./image/long.png" alt="">
                 </div>
                 <div class="info">
                     <h1>龙头维修</h1>
@@ -37,14 +37,18 @@
                         <span>非常专业</span>
                         <span>价格合理</span>
                     </div>
-                    <div class="total">已售：68</div>
+                    <div class="total">已售：68
+                        <div class="dingjin">
+                            60元 定金
+                        </div>
+                    </div>
                 </div>
             </a>
         </li>
         <li class="listItem">
             <a href="./xiangqing.html">
                 <div class="thumb">
-                    <img src="./image/l1.png" alt="">
+                    <img src="./image/long.png" alt="">
                 </div>
                 <div class="info">
                     <h1>龙头维修</h1>
@@ -56,14 +60,18 @@
                         <span>非常专业</span>
                         <span>价格合理</span>
                     </div>
-                    <div class="total">已售：68</div>
+                    <div class="total">已售：68
+                        <div class="dingjin">
+                            60元 定金
+                        </div>
+                    </div>
                 </div>
             </a>
         </li>
         <li class="listItem">
             <a href="./xiangqing.html">
                 <div class="thumb">
-                    <img src="./image/l1.png" alt="">
+                    <img src="./image/long.png" alt="">
                 </div>
                 <div class="info">
                     <h1>龙头维修</h1>
@@ -75,14 +83,18 @@
                         <span>非常专业</span>
                         <span>价格合理</span>
                     </div>
-                    <div class="total">已售：68</div>
+                    <div class="total">已售：68
+                        <div class="dingjin">
+                            60元 定金
+                        </div>
+                    </div>
                 </div>
             </a>
         </li>
         <li class="listItem">
             <a href="./xiangqing.html">
                 <div class="thumb">
-                    <img src="./image/l1.png" alt="">
+                    <img src="./image/long.png" alt="">
                 </div>
                 <div class="info">
                     <h1>龙头维修</h1>
@@ -94,14 +106,18 @@
                         <span>非常专业</span>
                         <span>价格合理</span>
                     </div>
-                    <div class="total">已售：68</div>
+                    <div class="total">已售：68
+                        <div class="dingjin">
+                            60元 定金
+                        </div>
+                    </div>
                 </div>
             </a>
         </li>
         <li class="listItem">
             <a href="./xiangqing.html">
                 <div class="thumb">
-                    <img src="./image/l1.png" alt="">
+                    <img src="./image/long.png" alt="">
                 </div>
                 <div class="info">
                     <h1>龙头维修</h1>
@@ -113,10 +129,15 @@
                         <span>非常专业</span>
                         <span>价格合理</span>
                     </div>
-                    <div class="total">已售：68</div>
+                    <div class="total">已售：68
+                        <div class="dingjin">
+                            60元 定金
+                        </div>
+                    </div>
                 </div>
             </a>
         </li>
+
     </ul>
 </section>
 </body>
