--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 晋彤
 </header>
 <div class="search">
-    <span>太原    <i class="iconfont icon-xiangxia">
-    </i></span>
-    <a href=""></a>
+    <span>太原   <a href="./address.html"><i class="iconfont icon-xiangxia">
+    </i></a> </span>
+    <a href="./search.html"></a>
 </div>
 <div class="banner">
     <img src="./image/banner.png" alt="">
